force-app/main/default/objects/openq__Engagement_Plan__c/openq__Engagement_Plan__c.object-meta.xml
<CustomObject>
    <label>Engagement Plan</label>
    <nameField>
        <label>Engagement Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>