force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Activities_and_Objectives__c.field-meta.xml
<CustomField>
    <fullName>openq__Activities_and_Objectives__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activities and Objectives</label>
    <referenceTo>openq__Activities_and_Objectives__c</referenceTo>
    <relationshipLabel>Engagement Plans</relationshipLabel>
    <relationshipName>Engagement_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>