force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Activity__c.field-meta.xml
<CustomField>
    <fullName>openq__Activity__c</fullName>
    <formula>openq__Activities_and_Objectives__r.openq__Activity__c</formula>
    <label>Activity</label>
    <type>Text</type>
</CustomField>