force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>openq__Days_Remaining__c</fullName>
    <formula>openq__Plan_End_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>