force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Is_IIS_Grant__c.field-meta.xml
<CustomField>
    <fullName>openq__Is_IIS_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IIS/Grant</label>
    <type>Checkbox</type>
</CustomField>