force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Plan_Owners__c.field-meta.xml
<CustomField>
    <fullName>openq__Plan_Owners__c</fullName>
    <label>Plan Owners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>