force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Publication_Type__c.field-meta.xml
<CustomField>
    <fullName>openq__Publication_Type__c</fullName>
    <label>Publication Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abstract/Poster</fullName>
            </value>
            <value>
                <fullName>Book Chapter</fullName>
            </value>
            <value>
                <fullName>Primary Publication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>