force-app/main/default/objects/openq__Engagement_Plan__c/fields/openq__Sub_Plan1__c.field-meta.xml
<CustomField>
    <fullName>openq__Sub_Plan1__c</fullName>
    <formula>openq__Sub_Plan__r.openq__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Plan</label>
    <type>Text</type>
</CustomField>