force-app/main/default/objects/openq__Engagement_Plan__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Related products</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-product specific</fullName>
            </value>
            <value>
                <fullName>Verifi TSO</fullName>
            </value>
            <value>
                <fullName>NIPT in-lab solution</fullName>
            </value>
            <value>
                <fullName>TST170</fullName>
            </value>
            <value>
                <fullName>TST500+ Tissue</fullName>
            </value>
            <value>
                <fullName>TST500+ Plasma</fullName>
            </value>
            <value>
                <fullName>TS ctDNA kit</fullName>
            </value>
            <value>
                <fullName>Exome</fullName>
            </value>
            <value>
                <fullName>WGS</fullName>
            </value>
            <value>
                <fullName>TruSight One</fullName>
            </value>
            <value>
                <fullName>TruSight Cardio</fullName>
            </value>
            <value>
                <fullName>Cystic Fibrosis</fullName>
            </value>
            <value>
                <fullName>WGS/WES</fullName>
            </value>
            <value>
                <fullName>HumanCytoSNP-12</fullName>
            </value>
            <value>
                <fullName>CytoSNP-850K</fullName>
            </value>
            <value>
                <fullName>General Genetics</fullName>
            </value>
            <value>
                <fullName>Product Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>