force-app/main/default/objects/openq__Engagement_Plan__c/validationRules/Engagement_Plan_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Plan_Name_Required</fullName>
    <active>true</active>
    <description>Requires Engagement Plan name on creation.</description>
    <errorConditionFormula>AND
(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
ISNEW(),
ISBLANK( openq__Name__c )
)</errorConditionFormula>
    <errorMessage>Engagement Plan Name is required.</errorMessage>
</ValidationRule>