force-app/main/default/objects/openq__Engagement_Plan__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>openq__Name__c</columns>
    <columns>NAME</columns>
    <columns>openq__Number_of_Participants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>